# ml_ops2

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  dvc.yaml  metrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
deployment/kubernetes/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deployment/monitoring/: Makefile  README.md  grafana-datasource.yaml  grafana-deployment.yaml  grafana-provisioning.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  servicemonitor-credit-scoring.yaml
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  runbook.md
infrastructure/: README.md  backend-config.example.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/bootstrap/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
models/: benchmark_results.json  credit_nn_metrics.json  load_test_report.json  model.onnx  model_quantized.onnx  optimization_report.json
monitoring/: README.md
notebooks/: 01_eda.ipynb
scripts/: build_and_run.ps1  build_and_run.sh  drift_monitor.py  evidently_concept_drift_report.py  evidently_drift_report.py  validate_ge.py
scripts/model_training/: benchmark_inference.py  load_test.py  onnx_conversion.py  optimize_model.py  train_nn.py  validate_onnx.py
scripts/orchestration/: README.md  drift_trigger_dag.py  retraining_dag.py
src/api/: app.py
src/data/: make_dataset.py  (+1 more)
tests/: __init__.py  test_metrics.py  test_pipeline.py  test_preprocessing.py  test_validation.py
(+27 files in other folders)
